--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,16 @@
 <resources>
-    <string name="app_name">Iotprojectex3</string>
+    <string name="app_name">WhereRU</string>
     <string name="locationTxt">Continuous Location Update</string>
     <string name="action_settings">Settings</string>
-    <string name="name">Name</string>
-    <string name="email">Email</string>
-    <string name="hint_password">Password</string>
-
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="EnterDetails">Enter names of your Friends or Family members</string>
+    <string name="swipe_left_for_register">Swipe Left for Register</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+    <string name="person1">Person1 Name</string>
+    <string name="person2">Person2 Name</string>
+    <string name="tag">Lets join us and \nKnow where are your close ones</string>
+    <string name="swipe_right_for_login">Swipe Right for Login</string>
+    <string name="register">Register</string>
+    <string name="your_name">Name</string>
 </resources>
